added lettre to footer

--- a/boot.html
+++ b/boot.html
@@ -51,7 +51,7 @@
     <div class="box zone"><img src="./img/desktop_analytics_2.png"></div>
     <div class="box zone last-child"><img src="./img/server_safe_2.png"></div>
 </div>
-  <footer class="zone yellow"> <p>&copyright made by Justin </p></footer>
+  <footer class="zone yellow"> <p>&copyright made by Justin & joyce </p></footer>
    
 </body>
 </html>
